@@ -10,6 +10,7 @@ Version 0.5.0~dev
 	* Added basic support for shoutcast metadata relaying.
 	* Added client buffer queue sizes statistics to JSON status.
 	* httpkiller: add --random-path option.
+	* Properly handle HTTP HEAD requests for streams.
 
 Version 0.4.0 Released on 2011/11/22
 
